--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
