Updated some html.

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
 
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
-    <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -23,8 +22,8 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="NDVjNDEwNWQtYjRkMi00ZTU3LWJhMzQtMThjYzVhYjY2MGJkNjM2NjE2NDQwOTM2MDg0NTk3" id="snipcart"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119169650-1"></script>
-    <script>
+    <script async type="text/javascript" src="https://www.googletagmanager.com/gtag/js?id=UA-119169650-1"></script>
+    <script type="text/javascript">
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
