added media queries for mobile optimization

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<head>
+<head lang="en">
     <meta charset="utf-8">
     <title>Hobo Seafood - Order Online</title>
     <base href="/" />
