--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 
 </head>
 
